feat(visit): remove crud v2 (GO-53)
